update but not generated.

--- a/_source/2_8.md
+++ b/_source/2_8.md
@@ -1,57 +1,63 @@
-第八节 成语的挑战 *I'm sick and tired of having to support of my brother;我已经烦透照顾我弟弟了
-just because he refuses to go out and find a job.;只因为他不肯出去找工 作，
-*I'm sick and tired of having to support of my brother;我已经烦透照顾我弟弟了
-just because he refuses to go out and find a job.;只因为他不肯出去找工 作，
-I'm sick and tired of having to support of my husband;我已经烦透照顾我丈夫了
-just because he refuses to go out and find a job.;只因为他不肯出去找工 作，
-Going Out for the Evening;晚上外出
-A: Let's go to the movies. There's a good one playing now.;(去看电影吧，有部好片 子正在放映。)
-B: I'd like to, but I can't. I really have to study.;我想去，但是不行，我要 学习。
-I wasted the whole afternoon.;我已经浪费了一个下午.
-I forgot I had to brush up on my English.;我忘记温习英语了。
-Then, all of a sudden I remembered.;我突然才想起
-A: Oh, come on! We'll be home early/before 11.;(噢，走吧!我们会早点 儿回家的。/十一之前回 来的。)
-B: No, I'd better not. I have a big exam tomorrow.;不，我不能这样。我明 天有一个考试。
-I was about to study when you came in. You know how it is.;你进来的时候我正要开 始学习呢。你也知道的，
-If you don't study, you don't pass. That goes without saying;如果不准备的话，毫无 疑问会通过不了。
-A: Exam? Tomorrow? Oh- oh!;(考试?明天?噢噢!)
-B: What's the matter /What's wrong?;(怎么啦?)
-A: I just remembered. I have a test, too!;(我刚记起我明天也有 考试!)
-B: We can go to the movies some other time.;我们可以下次去看电 影嘛。
+# 第八节 成语的挑战
+
+— 英语真正突破和成功的开始
+
+---
+
+I'm sick and tired of having to support of my brother just because he refuses to go out and find a job.  
+我已经烦透照顾我弟弟了，只因为他不肯出去找工作。
+
+I'm sick and tired of having to support of my husband just because he refuses to go out and find a job.  
+我已经烦透照顾我丈夫了，只因为他不肯出去找工作。
+
+Going Out for the Evening 晚上外出
+A: Let's go to the movies. There's a good one playing now. (去看电影吧，有部好片子正在放映。)
+B: I'd like to, but I can't. I really have to study. 我想去，但是不行，我要学习。
+I wasted the whole afternoon. 我已经浪费了一个下午.
+I forgot I had to brush up on my English. 我忘记温习英语了。
+Then, all of a sudden I remembered. 我突然才想起
+A: Oh, come on! We'll be home early/before 11. (噢，走吧!我们会早点儿回家的。/十一之前回来的。)
+B: No, I'd better not. I have a big exam tomorrow. 不，我不能这样。我明天有一个考试。
+I was about to study when you came in. You know how it is. 你进来的时候我正要开始学习呢。你也知道的，
+If you don't study, you don't pass. That goes without saying 如果不准备的话，毫无疑问会通过不了。
+A: Exam? Tomorrow? Oh- oh! (考试?明天?噢噢!)
+B: What's the matter /What's wrong? (怎么啦?)
+A: I just remembered. I have a test, too! (我刚记起我明天也有考试!)
+B: We can go to the movies some other time. 我们可以下次去看电影嘛。
 第一笔财富：;
-brush up on something: review something to make it fresh again in one's mind;提高；改进；重温；再 练。
-*They came here to brush up on technology.;(他们来此以求提高技 术。)
-*I really need to brush up on my English.;(我确实需要提高我的 英语水平。)
-*I'm going to give a speech tomorrow, so I have to brush up on my notes.;(明天我要进行一场演讲， 因此，我必须整理一下 我的笔记。)
-*Professor Wang had not given a talk on management for a long time,;王教授很久没有讲授管理 方面的课程了,
-so he had to brush up on some of the new ideas. 他必须学习研究一下一 些新的发展;
-all of a sudden: something happening quickly; without advance warning.;(口语)突然；忽然；出其 不意地；冷不防。
-*Lisa looked very sad, but then, all of a sudden, she began to laugh.;(丽萨看起来很悲伤， 但突然她大笑起来。)
-*All of a sudden, she burst into laughter.;(她突然大笑起来。)
-*They were sitting quietly when all of a sudden there was a loud noise.;(他们正静静地坐着， 突然传来一声巨响。)
-*It started out to be a sunny day. They, all of a sudden,;天本来晴朗，突然
-it became cloudy and began to rain。;突然变得多云开始下 起雨。
-had better('d better): should do something; ought to do something.;最好……；应该……。
-*You had better not go out today.;(今天你最好不要外出。)
-*I think we'd better discuss it more.;(我认为我们应该进一 步讨论这事。)
-*I'd better go now or I'll be late for class.;(我最好现在就走， 否则我上课就会迟到。)
-*You'd better take your raincoat because it's supposed to rain today.;(你最好带上雨衣，今天 能会下雨。)
-第四笔财富： about to: on the point of doing something.;刚要；打定主意要。
-*We are just about to leave.;(我们正准备离开。)
-Cathy was just about to leave when Mr. Lee invited her to stay for dinner.;凯茜正准备离开的时候， 李先生邀请她留下来吃 晚饭。
-*I'm not about to waste my time doing something foolish.;(我绝不再浪费时间做愚 蠢的事了。)
-*Stone was about to leave when the telephone rang.;(石头正准备离开，电话 铃响了。)
-第五笔财富： Goes without saying:;不言而喻；
-something is so obvious that it doesn't have to be mentioned.;不言而喻，不用说。
-*It goes without saying that our success depends on diligence.;(不用说，我们的成功取 决于勤奋。)
-*It goes without saying that children should not play with guns.;(不用说，小孩不应当 玩弄枪枝。)
-*Mary's an excellent student.;玛丽是个优秀的学生
-It goes without saying that her parents are very proud of her.;(不用说，她的父母以她 为荣。)
-*Anne just told me she can't go with us. It goes without saying we're disappointed.;(安娜刚告诉我不能和我 们一起去了，不用说，我 们都很失望。)
-第六笔财富： What's the matter? ＝What is wrong?;怎么啦?出了什么事?
-*What's the matter with Kate? She looks angry.;凯特怎么啦?她好像很 生气.
-*What's the matter with this computer?;(这台计算机出了什么 毛病?)
-*How cold your hands feel! What's the matter with you?;(你的手怎么这样冰冷! 你怎么啦!)
+brush up on something: review something to make it fresh again in one's mind 提高；改进；重温；再练。
+*They came here to brush up on technology. (他们来此以求提高技术。)
+*I really need to brush up on my English. (我确实需要提高我的英语水平。)
+*I'm going to give a speech tomorrow, so I have to brush up on my notes. (明天我要进行一场演讲， 因此，我必须整理一下我的笔记。)
+*Professor Wang had not given a talk on management for a long time, 王教授很久没有讲授管理方面的课程了,
+so he had to brush up on some of the new ideas. 他必须学习研究一下一些新的发展;
+all of a sudden: something happening quickly; without advance warning. (口语)突然；忽然；出其不意地；冷不防。
+*Lisa looked very sad, but then, all of a sudden, she began to laugh. (丽萨看起来很悲伤， 但突然她大笑起来。)
+*All of a sudden, she burst into laughter. (她突然大笑起来。)
+*They were sitting quietly when all of a sudden there was a loud noise. (他们正静静地坐着， 突然传来一声巨响。)
+*It started out to be a sunny day. They, all of a sudden, 天本来晴朗，突然
+it became cloudy and began to rain。 突然变得多云开始下起雨。
+had better('d better): should do something; ought to do something. 最好……；应该……。
+*You had better not go out today. (今天你最好不要外出。)
+*I think we'd better discuss it more. (我认为我们应该进一步讨论这事。)
+*I'd better go now or I'll be late for class. (我最好现在就走， 否则我上课就会迟到。)
+*You'd better take your raincoat because it's supposed to rain today. (你最好带上雨衣，今天能会下雨。)
+第四笔财富： about to: on the point of doing something. 刚要；打定主意要。
+*We are just about to leave. (我们正准备离开。)
+Cathy was just about to leave when Mr. Lee invited her to stay for dinner. 凯茜正准备离开的时候， 李先生邀请她留下来吃晚饭。
+*I'm not about to waste my time doing something foolish. (我绝不再浪费时间做愚蠢的事了。)
+*Stone was about to leave when the telephone rang. (石头正准备离开，电话铃响了。)
+第五笔财富： Goes without saying: 不言而喻；
+something is so obvious that it doesn't have to be mentioned. 不言而喻，不用说。
+*It goes without saying that our success depends on diligence. (不用说，我们的成功取决于勤奋。)
+*It goes without saying that children should not play with guns. (不用说，小孩不应当玩弄枪枝。)
+*Mary's an excellent student. 玛丽是个优秀的学生
+It goes without saying that her parents are very proud of her. (不用说，她的父母以她为荣。)
+*Anne just told me she can't go with us. It goes without saying we're disappointed. (安娜刚告诉我不能和我们一起去了，不用说，我们都很失望。)
+第六笔财富： What's the matter? ＝What is wrong? 怎么啦?出了什么事?
+*What's the matter with Kate? She looks angry. 凯特怎么啦?她好像很生气.
+*What's the matter with this computer? (这台计算机出了什么毛病?)
+*How cold your hands feel! What's the matter with you? (你的手怎么这样冰冷! 你怎么啦!)
 SUBSTITUTION DRILL;
 1I have to brush up on my French/English/ history/grammar rules /speaking skills.;
 2All of a sudden I woke up/I remembered her name/she left the room/it began to rain;
