--- a/1.md
+++ b/1.md
@@ -4,7 +4,9 @@
 
 #### My Pledge/Oath 我的誓言
 
-<iframe height="36" width="260" src="http://www.ximalaya.com/swf/sound/orange.swf?id=12929476&auto=true" frameborder=0 allowfullscreen></iframe>
+<audio preload="none" style="width: 100%;" controls="controls">
+<source type="audio/mpeg" src="/recording/01_my_pledge.mp3" />
+</audio>
 
 What's your story? 
 
