--- a/2-1.md
+++ b/2-1.md
@@ -5,7 +5,9 @@
 ---
 
   <div style="padding: 32px">
-  <iframe height="36" width="260" src="http://www.ximalaya.com/swf/sound/orange.swf?id=12997607" frameborder=0 allowfullscreen></iframe><br />
+  <audio preload="none" style="width: 100%;" controls="controls">
+  <source type="audio/mpeg" src="/recording/02_01_sentencePattern_01_20.mp3" />
+  </audio>
   Do you like Chinese food/studying Chinese/him/movies/our city/sports/watching sports/traveling/cars/driving/chasing girls?
   </div>
 
@@ -76,7 +78,9 @@ Let's have a beer or something. 咱们喝点啤酒什么的。
 20. Where is...?  
 Where is your office? 你们的办公室在哪里？
 
-  <iframe height="36" width="260" src="http://www.ximalaya.com/swf/sound/orange.swf?id=12997624" frameborder=0 allowfullscreen></iframe>
+  <audio preload="none" style="width: 100%;" controls="controls">
+  <source type="audio/mpeg" src="/recording/02_01_sentencePattern_21_40.mp3" />
+  </audio>
 
 21. What is...? ……是什么？  
 What is you plan? 你的计划是什么？
@@ -138,7 +142,9 @@ Let's get together for lunch. 让我们聚在一起吃顿午餐吧。
 40. getting...for... 获得……以作为……  
 I'm getting a new computer for birthday present. 我得到一台新电脑，作为我的生日礼物。
 
-  <iframe height="36" width="260" src="http://www.ximalaya.com/swf/sound/orange.swf?id=12997632" frameborder=0 allowfullscreen></iframe>
+  <audio preload="none" style="width: 100%;" controls="controls">
+  <source type="audio/mpeg" src="/recording/02_01_sentencePattern_41_60.mp3" />
+  </audio>
 
 41. How did you do on...? 你……的表现如何？  
 How did you do on your test? 你这次考试的结果如何？
@@ -200,7 +206,9 @@ How nice/pretty/cold/funny/stupid/boring/interesting!...
 60. How about...? ……如何？……怎么样？  
 How about going out for dinner? 出去吃晚餐如何？
 
-  <iframe height="36" width="260" src="http://www.ximalaya.com/swf/sound/orange.swf?id=12997650" frameborder=0 allowfullscreen></iframe>
+  <audio preload="none" style="width: 100%;" controls="controls">
+  <source type="audio/mpeg" src="/recording/02_01_sentencePattern_61_80.mp3" />
+  </audio>
 
 61. I'm sorry... 我对……很遗憾难过。  
 I'm sorry that you didn't get the job. 很遗憾，你没有得到那份工作。
@@ -263,7 +271,9 @@ It's not his work that bothers me it's his attitude. 因扰我的不是他的工
 80. It sounds... 听起来……  
 It sounds like you enjoyed it. 听起来你好像蛮喜欢的。
 
-  <iframe height="36" width="260" src="http://www.ximalaya.com/swf/sound/orange.swf?id=12997672" frameborder=0 allowfullscreen></iframe>
+  <audio preload="none" style="width: 100%;" controls="controls">
+  <source type="audio/mpeg" src="/recording/02_01_sentencePattern_81_101.mp3" />
+  </audio>
 
 81. It seems... 好像……  
 It seems to me that he would like to go back home. 我觉得他好像想要回家。
