--- a/2-3.md
+++ b/2-3.md
@@ -5,7 +5,9 @@
 ---
 
   <div style="padding: 32px">
-  <iframe height="36" width="260" src="http://www.ximalaya.com/swf/sound/orange.swf?id=13139265" frameborder=0 allowfullscreen></iframe>
+  <audio preload="none" style="width: 100%;" controls="controls">
+  <source type="audio/mpeg" src="/recording/02_03_exaggerate_1.mp3" />
+  </audio>
   </div>
 
 <strong>Greatest Sentences Ever to Practice [æ] Sound</strong>
@@ -54,7 +56,9 @@ Too bad it wasn't my wife because I loved my cat. 太遗憾了，死的不是我
 
 20. Back-to-back defeats made him sad. 连续的失败使他很伤心。
 
-    <iframe height="36" width="260" src="http://www.ximalaya.com/swf/sound/orange.swf?id=13139266" frameborder=0 allowfullscreen></iframe>
+  <audio preload="none" style="width: 100%;" controls="controls">
+  <source type="audio/mpeg" src="/recording/02_03_exaggerate_2.mp3" />
+  </audio>
 
 21. Stop picking on me and get off my back. Man! I've had it. 别再对我进行挑剔，别再找我麻烦了。我受够了！
 
