--- a/2-4.md
+++ b/2-4.md
@@ -4,7 +4,9 @@
 
 超级六星级动词
 
-<iframe height="36" width="260" src="http://www.ximalaya.com/swf/sound/orange.swf?id=13176236" frameborder=0 allowfullscreen></iframe>
+<audio preload="none" style="width: 100%;" controls="controls">
+<source type="audio/mpeg" src="/recording/02_04_456_accomplish.mp3" />
+</audio>
 
 **accomplish**  
 to succeed in doing; finish successfully; complete. 做成功；完成；实现；达成
