--- a/2-8.md
+++ b/2-8.md
@@ -4,7 +4,9 @@
 
 ---
 
-<iframe height="36" width="260" src="http://www.ximalaya.com/swf/sound/orange.swf?id=15380697" frameborder=0 allowfullscreen></iframe>
+<audio preload="none" style="width: 100%;" controls="controls">
+<source type="audio/mpeg" src="/recording/02_08_proverb.mp3" />
+</audio>
 
 I'm sick and tired of having to support of my brother/husband just because he refuses to go out and find a job.  
 我已经烦透照顾我弟弟/丈夫了，只因为他不肯出去找工作。
