--- a/2-2.md
+++ b/2-2.md
@@ -5,7 +5,9 @@
 ---
 
   <div style="padding: 32px">
-  <iframe height="36" width="260" src="http://www.ximalaya.com/swf/sound/orange.swf?id=13032083" frameborder=0 allowfullscreen></iframe>
+  <audio preload="none" style="width: 100%;" controls="controls">
+  <source type="audio/mpeg" src="/recording/02_02_100superShortSentences.mp3" />
+  </audio>
   </div>
 
   <div style="border:1px solid #444444; padding: 7px 20px; width:100%">
