--- a/2-6.md
+++ b/2-6.md
@@ -4,8 +4,10 @@
 
 ---
 
-<iframe height="36" width="260" src="http://www.ximalaya.com/swf/sound/orange.swf?id=13255267" frameborder=0 allowfullscreen></iframe>
- 
+<audio preload="none" style="width: 100%;" controls="controls">
+<source type="audio/mpeg" src="/recording/02_06_3_ly.mp3" />
+</audio>
+
 Q: What impressed you during your U.S. visit? 此次美国之行有什么令您印象深刻？
 
 A: What impressed me most was that wherever I went, I was received in a very friendly manner by the American people.  
